tests/ast_interpreter/err_fun_arity_too_few.expected
<string>:6:5: error: function expects 2 arguments, but 1 were provided
    add(5);
    ^^^
